# Apex_Store

./: .gitignore  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: edit_my_account.html  login.html  my_account.html  signup.html
core/: settings.py  urls.py
ecommerce/: admin.py  cart.py  context_processors.py  models.py  urls.py  views.py
ecommerce/migrations/: 0001_initial.py  0002_alter_category_options_product.py  0003_product_image_product_thumbnail.py  0004_order_alter_product_image_alter_product_thumbnail_and_more.py  0005_alter_order_zip_code.py  0006_alter_order_zip_code.py  0007_alter_order_options_orderitem_created_at_and_more.py  0008_review.py
ecommerce/templates/ecommerce/: base.html  checkout.html  index.html  menu_cart.html  product_detail.html  shop.html  show_cart.html  success_purchase.html
ecommerce/templates/ecommerce/partials/: cart_item.html  cart_total_price.html  menu_cart.html  product_list_item.html
