[tool.poetry]
name = "apex-ecommerce"
version = "0.1.0"
description = "An E-Commerce web app with Django and HTMX."
authors = ["Milad <milad.hz75@gmail.com>"]
readme = "README.md"
packages = [{include = "apex_ecommerce"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
pillow = "^9.5.0"
stripe = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
